syntax = "proto3";
import "google/protobuf/empty.proto";

option csharp_namespace = "Client";

service GStoreService {
	rpc Read (GStoreReadRequest) returns (GStoreReadReply);
	rpc Write (GStoreWriteRequest) returns (google.protobuf.Empty);
	rpc ListServer (GStoreListServerRequest) returns (GStoreListServerReply);
	rpc ListGlobal (google.protobuf.Empty) returns (GStoreListGlobalReply);
}

message GStoreReadRequest {
	int32 partition_id = 1;
	int32 object_id = 2;
}

message GStoreReadReply {
	string object_value = 1;
}

message GStoreWriteRequest {
	int32 partition_id = 1;
	int32 object_id = 2;
	string object_value = 3;
}

message GStoreListServerRequest {
	int32 server_id = 1;
}

message GStoreListServerReply {
	repeated Object objects = 1;
}

message Object {
	ObjectIdentifier object_identifier = 1;
	string value = 2;
	bool is_master_replica = 3;
}

message ObjectIdentifier {
	string partition_id = 1;
	string object_id = 2;
}

message GStoreListGlobalReply {
	repeated ObjectIdentifier object_identifiers = 1;
}