syntax = "proto3";
import "google/protobuf/empty.proto";

service GStoreService {
	rpc Read (GStoreReadRequest) returns (GStoreReadReply);
	rpc Write (GStoreWriteRequest) returns (google.protobuf.Empty);
	rpc ListServer (google.protobuf.Empty) returns (GStoreListServerReply);
	rpc ListGlobal (google.protobuf.Empty) returns (GStoreListGlobalReply);
}

message ObjectIdentifier {
	string partition_id = 1;
	string object_id = 2;
}

message Object {
	ObjectIdentifier object_identifier = 1;
	string value = 2;
}

message ObjectReplica {
	Object object = 1;
	bool is_master_replica = 2;
}

message GStoreReadRequest {
	ObjectIdentifier object_identifier = 1;
}

message GStoreReadReply {
	Object object = 1;
}

message GStoreWriteRequest {
	Object object = 1;
}

message GStoreListServerReply {
	repeated ObjectReplica object_replicas = 1;
}

message GStoreListGlobalReply {
	repeated ObjectIdentifier object_identifiers = 1;
}